squashing bugs

--- a/src/main.css
+++ b/src/main.css
@@ -35,11 +35,6 @@ main {
   );
 }
 
-.search-box {
-  width: 100%;
-  margin-bottom: 30px;
-}
-
 .search-box .search-bar {
   display: block;
   width: 100%;
